@@ -4,6 +4,7 @@ Rubine Lite Changelog
 
 Version 1.0.3
 -----------------------------------
+[added] sanitize_callback functions for all theme settings
 [changed] post layout and postmeta for single posts
 [fixed] styling for archive posts without featured image
 
